--- a/zjc_src/Makefile
+++ b/zjc_src/Makefile
@@ -3,7 +3,7 @@
 #---------------------------------------------------------------------------
 .SUFFIXES: .o .c .u
 
-CC	= gcc
+CC	= gcc -std=c99
 RANLIB	= ranlib
 
 EXE	=
